* read
  - add parent support
* seek
  - add parent support
* add integrity tests
* add pyvmdk

Deployment:
* check manuals
  - update libvmdk.3
  - update vmdkinfo.1
  - add vmdkmount.1

* Test images
  - vmdk flat
  - vmdk flat split (done)
  - Monolithic sparse (done)
  - 2GB extent sparse (done)
  - cowd sparse
  - cowd sparse split
  - compressed (done)
  - (compressed) with parent (done)

20131209
* updated dependencies
* worked on pyvmdk
* worked on compressed VMDK sparse extent data files support
* vmdkmount bug fix in parent chain mounting

20131017
* updated dependencies
* worked on pyvmdk integer support

20131008
* updated msvscpp files

20131004
* updated dependencies
* worked on libcthreads build support

20130916
* updated dependencies
* worked on libcthreads build support
* code clean up

20130831
* updated dependencies

20130608
* worked on tests

20130522
* changes for deployment

20130521
* changes for deployment

20130520
* changes for deployment

20130517
* changes for extent descriptor parsing
  - added support for extent descriptor with additional values
  - added support for ZERO extent descriptor

20130516
* worked on mfdata refactor
* added support for flat extent files
* worked on COWD extent file support
* changes for deployment

20130515
* worked on mfdata refactor

20130514
* worked on mfdata refactor

20130513
* worked on mfdata refactor

20130512
* updated dependencies
* added to macosx files
* worked on Python bindings

20130427
* 2013 update
* updated dependencies

20121201
* worked on parent image support

20121129
* worked on parent image support
* updated libvmdk.3 man page

20121128
* worked on parent image support

20121127
* worked on parent image support
* updated libvmdk.3 man page

20120924
* added extent data file sector restriction
* bug fixes
* code clean up

20120923
* worked on multi-file image support

20120922
* code clean up
* worked on descriptor file support
* worked on multi-file image support

20120921