@@ -69,6 +69,9 @@ Deployment:
   - compressed (done)
   - (compressed) with parent (done)
 
+20131210
+* fixed issue in mount handle for empty basename
+
 20131209
 * updated dependencies
 * worked on pyvmdk
